fixed spacing

--- a/css/cat.css
+++ b/css/cat.css
@@ -8,7 +8,6 @@ body {
 .container {
     display: flex; 
     flex-direction: column;
-    height: 80%;
     justify-content: center;
     align-items: center;
 }
@@ -27,8 +26,6 @@ body {
     font-size: 70px;
     color: white;
     letter-spacing: 4px;
-    position: absolute;
-    top: 40px;
     font-style: italic;
     font-weight: 900;
     -webkit-text-stroke: 2px black;
@@ -40,12 +37,12 @@ body {
     color: black;
     letter-spacing: 4px;
     text-decoration: none;
-    margin-top: 50px;
+    /*margin-top: 50px;*/
     font-weight: bold;
 }
 
 .icon {
-    margin-top: 70px;
+    /*margin-top: 70px;*/
 }
 
 .space {
@@ -53,7 +50,8 @@ body {
 }
 
 .pic {
-  margin-top: 300px;
+  /*margin-top: 300px;*/
+  margin-top: 20px;
   height: 400px;
   user-drag: none; 
   user-select: none;
